vlib/v/parser/tests/match_range_dotdot_err.out
vlib/v/parser/tests/match_range_dotdot_err.vv:3:4: error: match only supports inclusive (`...`) ranges, not exclusive (`..`) 
    1 | fn test_match() {
    2 |     match 5 {
    3 |         0..10 { '0-9' }
      |          ~~
    4 |         else { 'other' }
    5 |     }
