vlib/v/parser/tests/match_range_dotdot_err.vv
fn test_match() {
	match 5 {
		0..10 { '0-9' }
		else { 'other' }
	}
}
